2012-04-24

* Fixed bug in configuration logic that was setting sslEnabled to true.
* Stubbed out some IRC methods in the publisher client.

2012-04-23

* Added support for ini files (local dir and user home dir).
* Added a make target for importing bzr into a git checkout.
* Added make target for adding files to both bzr and git.
* Added convenience scripts for starting and stopping the bot server.
* Added a make target for updating git and bzr.
* Updated the README with "getting started" instructions.
* Updated the setup.py with deps.
* Moved the util scripts to make targets and added more make targets.
* Updated config file to convert unicode to str where necessary (for IRC).
* Cleaned up the code for getting the priv and pub keys.
* Updated TODO.
* More tweaks to the Makefile to support non-synced changes to bzr and git
  repos.
* Updated README with notes about configuration.
* Added another feature description.
* Noted a couple bugs.
* Changed the shell prompt.
* Moved the banner function into the API class.
* Added an API call for listing the channels.

2012-04-22

* Update dist util module to use .txt or .rst.
* Changed setup.py to point to the .rst docs.
* Fixed the Makefile to do "check" against the lib name, not the project name.
* Added more TODO items.
* Renamed all internal references of publishbot to prakasha.
* Added an exceptions module.
* Updated the key-getter to raise a custom exception if the server keys aren't
  present (and to give instructions on how to generate them).
* Added support for executing commands via the ssh command, such as:
    $ ssh -p 6622 "say('#adytum', 'wassup?')"
* Added new custom exception for commands that aren't defined in the namespace.
* Added windowChanged method.

2012-04-21

* More TODO changes.
* Started on README changes.
* Updated TODO.
* Updated ignore files.
* Added Hinglish font "bot" images.
* Updated banner in configuration.
* Tweaked Makefile.
* Added a setup.py file.
* Added distutil wrappers.